--- a/src/app/components/movie-registration-form/movie-registration-form.component.html
+++ b/src/app/components/movie-registration-form/movie-registration-form.component.html
@@ -20,6 +20,10 @@
           <mat-label>Sinopse do filme</mat-label>
           <textarea matInput formControlName="synopsis" required></textarea>
         </mat-form-field>
+        <mat-form-field>
+          <mat-label>Link da capa do filme</mat-label>
+          <textarea matInput formControlName="backgroundImage" required></textarea>
+        </mat-form-field>
       </form>
     </mat-expansion-panel>
   </mat-card-content>
