--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <mat-toolbar-row class="navbar-links">
     <a mat-button class="navbar-link" routerLink="/">Home</a>
     <a mat-button class="navbar-link" routerLink="/movies/new">Novo Filme</a>
-    <a mat-button class="navbar-link" routerLink="/about">Pesquisar Filme</a>
+    <a mat-button class="navbar-link" routerLink="/movies/search">Pesquisar Filme</a>
     <a mat-button class="navbar-link" routerLink="/movies/liked">Lista de filmes</a>
     <!-- Add more links as needed -->
   </mat-toolbar-row>
